# investing-for-kids

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml
.claude/: settings.json
.github/workflows/: monthly-ledger-advance.yml
config/: accounts.yaml  accounts_template.yaml
data/ledgers/: child_a.csv  child_b.csv
deck/: index.html  styles.css
deck/charts/: nflx_price.html  nvda_price.html  sp500_growth.html
deck/data/: nflx.csv  nvda.csv  sp500.csv
plans/: plan.md  slide_deck_vision.md  starting_vision.md
requirements/: main_3_13.txt
scripts/: screenshot_deck.py
src/investing_for_kids/: __init__.py
src/investing_for_kids/accounts/: __init__.py  backup.py  config.py  ledger.py  transactions.py  views.py
src/investing_for_kids/stocks/: __init__.py  build_charts.py  fetch_prices.py
src/investing_for_kids/theoretical/: __init__.py  growth.py  views.py
src/investing_for_kids/ui/: __init__.py  layout.py
