11[project]
name = "investing_for_kids"
version = "0.1.0"
description = "Local Streamlit app to teach the kids about investing and exponential growth."
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.37",
    "pandas>=2.2",
    "plotly>=5.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investing_for_kids"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
